Creating endpoint to create employees
