# ginSql/endpoints/employees/getEmployee.go
@@ -13,14 +13,14 @@ type GetEmployeeEndpoint struct {
 	controller employees.IEmployeeController
 }
 
-// @Summary		Get Employee
-// @Description	Get Employee data by id
-// @Produce		json
-// @Param			employeeID	path		integer	true	"employee ID"
-// @Success		200			{object}	controllerModels.Employee
-// @Failure		422			{object}	error
-// @Failure		400			{object}	error
-// @Router			/employees/:id [get]
+//	@Summary		Get Employee
+//	@Description	Get Employee data by id
+//	@Produce		json
+//	@Param			employeeID	path		integer	true	"employee ID"
+//	@Success		200			{object}	controllerModels.Employee
+//	@Failure		422			{object}	error
+//	@Failure		400			{object}	error
+//	@Router			/employees/:id [get]
 func (endpoint GetEmployeeEndpoint) GetEmployee(c *gin.Context) {
 	employeeId, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
